# two_prisoners_and_chessboard

./: LICENSE  README.md  config.py  flake.nix  main.py  pyproject.toml
src/: App.py  Cell.py  Color.py  Font.py  GuideText.py  TwoPrisonersAndChessboard.py  colors.py  guide_text.py  parity_check.py  patterns.py  square.py  theme.py  utils.py
