[tool.poetry]
name = "two_prisoners_and_chess_board"
version = "0.1.0"
description = "Two Prisoners and Chess Board Problem"
authors = ["PotassiumIodide <potassium.iodide28@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.60.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
